@@ -1,5 +1,7 @@
 *SVN*
 
+* Introduce SecretKeyGenerator for more secure session secrets than CGI::Session's pseudo-random id generator. Consider extracting to Active Support later.  #10286 [Hongli Lai]
+
 * RAILS_GEM_VERSION may be set to any valid gem version specifier.  #10057 [Chad Woolley, Chu Yeow]
 
 * Load config/preinitializer.rb, if present, before loading the environment.  #9943 [Chad Woolley]
